2010-02-22  Don Taber  <dtaber@topaflyers.com>

	* src/win/wgraph.c (SelFont):  After a font change, call 
	do_string_replot("") so that it is immediately visible.

2010-02-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Use dynamic allocation for all font names. This prevents
	buffer overflow problems for very long font names.

	* term/post.trm: Truncate over-long font names rather than allowing 
	buffer overflow.

2010-02-17  Christoph Junghans (ottxor)

	* configure.in plot.c: New configuration option to add local packager to
	list of contacts for bug reporting.
	Bug #2951583

2010-02-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arc):  Avoid calling trunc() because some compilers
	are still back in the dark ages (pre C99).

	* configure.in: Change default installation directory for x11 resources
	to /etc/X11/app-defaults.
	Bug #1953742

2010-02-17  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/plot.c (interrupt_setup): Ctrl+C crashes windows console build.
	SF Patch #2848002

2010-02-16  Peter Juhasz

	* src/graphics.c src/plot2d.c src/term.c docs/gnuplot.doc
	demo/circles.dem demo/energy_circles.dat:  Extend plot style
	"with circles" to allow optional start and end values for each arc.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm: Add the option
	"close" to the windows terminal driver. Update documentation
	accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm: Fix for windows terminal ignoring explicit fontname and
	size for labels.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wmenu.c (SendMacro): Bugfix in call to _getcwd.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm: Add the options "size" and "position" to the windows
	terminal driver. Update documentation accordingly.
